--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -5,6 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print greeting
-        run: echo "Hello world"
+        run: |
+          echo "Hello"
+          echo "How are you"
       - name: Bye
         run: echo "Done !"
